Pages in arabic are now excluded and I have finished downloading all the pages